Fix scroller spacing

--- a/app/assets/stylesheets/carousel.scss
+++ b/app/assets/stylesheets/carousel.scss
@@ -1,5 +1,4 @@
 .scroller{
-  margin-top: 1vh;
   .image{
     img{
       width: 55%;
